apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hallbooking-ingress
  namespace: hallbooking
spec:
  rules:
  - host: 13.233.127.114
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8081
